[package]
name = "blinky"
version = "0.1.0"
authors = ["Zain <zainulabideenbawa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies.dht-hal-drv]
#  version="0.2.1"
#  features = []

# [dependencies]
# void = {version ="1.0.2", default-features = false }
# embedded-hal = { version = "0.2.3", features = ["unproven"] }
# nb = "0.1.2"
# panic-halt = "0.2.0"
# panic-semihosting = "0.5.3"
# cortex-m = "0.6.1"
# cortex-m-rt = "0.6.10"
# cortex-m-semihosting = "0.3.5"
# stm32f1 = "0.8.0"
# stm32f1xx-hal = { version = "0.4.0", features = ["stm32f103", "rt"] }

# [profile.release]
# codegen-units = 1
# debug = true
# lto = true

[dependencies]
cortex-m = "0.5.6"
cortex-m-rt = "0.6.3"
cortex-m-semihosting = "0.3.5"
panic-semihosting = "0.5.3"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"

[dependencies.stm32f1xx-hal]
version = "0.2.0"
features = ["stm32f103", "rt"]